# Warehouse-operation-optimization

./: .gitignore  README.md  pyproject.toml
data/: logistic_dataset_modified.csv
notebooks/: data_manipulation.ipynb
streamlit_app/: app.py
streamlit_app/components/: rop project.drawio
streamlit_app/pages/: delivery.py  sales.py  warehouse.py
